            Fix issue where `E.toJS("\0"+"0") == '"\00"'` which is just `"\0"`

     2v14 : Bangle.js2: Fix issue with E.showMenu creating a global `s` variable
            Bangle.js2: Recheck string wrapping after font change inside E.showMenu
            Bangle.js2: Double input buffer size from 1kb to 2kb
            Bangle.js2: Fix E.showMenu title changing color after scroll down+up *if* a non-standard theme was used
            Bangle.js2: Fix wear detection on latest Bangle.js 2 (VC31B variant) (fix #2141)
            Bangle.js2: Allow variable HRM poll rates on Bangle.js 2 VC31B variant
            Bangle.js2: VC31 HRM variant now polls at 25hz (not 50)
            Bangle.js1: E.showMenu now displays boolean values with no `format` as a checkbox
            Bangle.js1: E.showMenu now displays a submenu for multiple choice menu items (#2184)
            Bangle.js: built-in locale now doesn't depend on argument being an instance of Date (#2187)
            Bangle.js: Add ".noList" property to prevent E.showScroller inside E.showMenu            
            Bangle.js2: Add "Back"-Button on submenus inside E_showMenu 
            Graphics: g.setClipRect now uses rotated coordinates
            Graphics: g.draw/fillCircle now works with rotated coordinates
            Bangle.js2: Touch/drag coordinates now obey g.setRotation
            Graphics: Fix drawString with combination of g.setClipRect and g.setRotation
            nRF5x: Allow 'high speed' watches via 'hispeed' argument to setWatch. Higher power consumption but detects fast (<25us) pulses.
            Bangle.js2: E.showMenu now returns 'scroller', `format` is called with a second argument, font in popup is scaled to fit (fix #2190)
            Fix recent class method regression (24247e4ec9) (fix #2197)
            Bangle.js2: 6x15 font tweaks for better ISO8859-1 support
            Bangle.js: Add clock property to "custom" mode in setUI