@@ -1,4 +1,5 @@
             Fix issue where `E.toJS("\0"+"0") == '"\00"'` which is just `"\0"`
+            Fix issue accessing `arguments` after/inside 'let/const' keyword (fix #2224)
 
      2v14 : Bangle.js2: Fix issue with E.showMenu creating a global `s` variable
             Bangle.js2: Recheck string wrapping after font change inside E.showMenu
